PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/DataStructures.pf
module DataStructures{

    test Person = (23, "test")

    data Person{
        age Int
        name String
    }

    fun main() : Int {
        print(test.age)

        (age:Int, name:String) PersAlt = (18, "alternate")
        print(persAlt.name)
        return 0
    }
}