PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Invalid_Data_Structures_no_data.pf
module DataStructures{

    Person test(23, "test")

    Person{
        Int age
        String name
    }

    mainFun(){
        print(test.age)

        (age:Int, name:String) PersAlt(18, "alternate")
        print(persAlt.name)
    }
}